[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/tss",
    "crates/client/network",
    "crates/client/service",
    "crates/client/rpc",
    "crates/client/rpc-api",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["nivek <h499871809@gmail.com>"]

[workspace.dependencies]
# Internal workspace crates
mpc-network = { path = "crates/client/network" }
mpc-rpc = { path = "crates/client/rpc" }
mpc-rpc-api = { path = "crates/client/rpc-api" }
mpc-service = { path = "crates/client/service" }
mpc-tss = { path = "crates/tss" }

# Async runtime
futures = { version = "0.3.31", features = ["compat"] }
futures-util = { version = "0.3.31" }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "net",
    "sync",
    "time",
] }
async-channel = { version = "1.6.1" }
async-trait = { version = "0.1.53" }

# Error handling
anyhow = { version = "1.0.100" }
thiserror = { version = "2.0.17" }

# CLI argument parsing
clap = { version = "4.5.50", features = ["derive", "env"] }

# Tracing & logging
tracing = { version = "0.1.41" }
tracing-error = { version = "0.2.0" }
tracing-otel-extra = { version = "0.31.0", features = ["logger", "env"] }

# Networking
libp2p = { version = "0.54.1", features = [
    "identify",
    "kad",
    "ping",
    "mdns",
    "noise",
    "tcp",
    "tokio",
    "yamux",
    "request-response",
    "macros",
] }
libp2p-identity = { version = "0.2.9" }
libp2p-kad = { version = "0.46.2", default-features = false }
unsigned-varint = { version = "0.8.0" }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.142" }
serde_ipld_dagcbor = { version = "0.6.4" }

# Utilities
uuid = { version = "1.18", features = ["v4"] }
hex = { version = "0.4" }
itertools = { version = "0.10" }
strum = { version = "0.27", features = ["derive"] }
derive_more = { version = "0.99.16" }

# Cryptography
blake2 = { version = "0.10" }
blake3 = { version = "1.3" }
sha3 = { version = "0.10.0", default-features = false }
zeroize = { version = "1.5.4" }

# Collections
smallvec = { version = "1.8.0" }
arrayvec = { version = "0.7.6" }

# Codec
parity-scale-codec = { version = "3.1.2" }

# FROST
frost-ed25519 = { version = "2.2.0" }
frost-secp256k1 = { version = "2.2.0" }
frost-core = { version = "2.2.0" }
rand = { version = "0.8" }

# JSON-RPC
jsonrpsee = { version = "0.26.0", features = [
    "server",
    "client",
    "macros",
    "ws-client",
] }

# Environment
dotenvy = { version = "0.15.7" }
