[package]
name = "mpc-tss"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal workspace crates
mpc-network = { workspace = true }
mpc-runtime = { workspace = true }

# Async runtime
futures = { workspace = true }
futures-util = { workspace = true }
async-channel = { workspace = true }
tokio = { workspace = true }
async-std = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging


# Networking
libp2p = { workspace = true }
unsigned-varint = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_ipld_dagcbor = { workspace = true }

# FROST
round-based = { workspace = true }
frost-ed25519 = { workspace = true }
frost-secp256k1 = { workspace = true }
frost-core = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }

# Cryptography
blake2 = { workspace = true }

# Utilities
strum = { workspace = true }
hex = { workspace = true }
