[package]
name = "mpc-tss"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal workspace crates
mpc-network = { workspace = true }
mpc-runtime = { workspace = true }
mpc-protocols-codecs = { workspace = true }
mpc-protocols-frost = { workspace = true }

# Async runtime
futures = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Networking
libp2p = { workspace = true }
unsigned-varint = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# FROST
frost-ed25519 = { workspace = true }
frost-secp256k1 = { workspace = true }
