[package]
name = "mpc-node"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal workspace crates
mpc-network = { workspace = true }
mpc-service = { workspace = true }
mpc-rpc = { workspace = true }
mpc-rpc-api = { workspace = true }
mpc-tss = { workspace = true }

# Async runtime
futures = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }

# CLI
clap = { workspace = true }

# Logging
tracing = { workspace = true }

# Networking
libp2p = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_ipld_dagcbor = { workspace = true }

# Cryptography
sha3 = { workspace = true }
