[package]
name = "mpc-network"
version.workspace = true
edition.workspace = true

[dependencies]
# Async runtime
futures = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
async-channel = { workspace = true }
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Networking
libp2p = { workspace = true }
unsigned-varint = { workspace = true, features = [
    "futures",
    "asynchronous_codec",
] }

# Serialization
serde = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
parity-scale-codec = { workspace = true }

# Utilities
derive_more = { workspace = true }
hex = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }

# Collections
smallvec = { workspace = true }
arrayvec = { workspace = true }

# Cryptography
blake3 = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
