[package]
name = "mpc-rpc-api"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal workspace crates
mpc-tss = { workspace = true }
mpc-network = { workspace = true }

# Async runtime
futures = { workspace = true }
async-std = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde_ipld_dagcbor = { workspace = true }

# JSON-RPC
jsonrpc-core = { workspace = true }
jsonrpc-derive = { workspace = true }
jsonrpc-ws-server = { workspace = true }
jsonrpc-core-client = { workspace = true }
