[package]
name = "mpc-rpc-api"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal workspace crates
mpc-tss = { workspace = true }
mpc-network = { workspace = true }

# Async runtime
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde_ipld_dagcbor = { workspace = true }

# JSON-RPC
jsonrpsee = { workspace = true }
