[package]
name = "mpc-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal workspace crates
mpc-network = { workspace = true }

# Logging
tracing = { workspace = true }

# Async runtime
futures = { workspace = true }
futures-util = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Networking
libp2p = { workspace = true }
unsigned-varint = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_ipld_dagcbor = { workspace = true }

# Cryptography
blake2 = { workspace = true }

# Utilities
itertools = { workspace = true }
